--- a/API/package.json
+++ b/API/package.json
@@ -15,6 +15,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.3",
     "nodemon": "^3.1.10"
