--- a/ecommerce-app/package.json
+++ b/ecommerce-app/package.json
@@ -8,11 +8,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-
-  
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.3",
     "react": "^19.1.0",
